# PX4-gazebo-Soaring

./: .gitignore
GZ_Msgs/: steps.txt
GZ_Msgs/examples/python_pub.cpp_sub/group_thermals_msg/cpp_subscriber/: CMakeLists.txt  subscriber_thermal_group.cc
GZ_Msgs/examples/python_pub.cpp_sub/group_thermals_msg/py_publisher/: py_publisher.py
GZ_Msgs/examples/python_pub.cpp_sub/one_thermal_msg/cpp_subscriber/: CMakeLists.txt  subscriber.cc
GZ_Msgs/examples/python_pub.cpp_sub/one_thermal_msg/py_publisher/: publisher.py
GZ_Plugins/MulticopterMotorModel/: CMakeLists.txt  MulticopterMotorModel.cc
GZ_Plugins/liftdrag/: CMakeLists.txt  README.md  build.sh  main.cc
GZ_Plugins/liftdrag_advanced/: CMakeLists.txt  main.cc
